# forta-bot-evasion

./: .gitignore  Dockerfile  README.md  package-lock.json  package.json  pyproject.toml  requirements.txt
.github/: CHANGELOG.md  README.md  TODO.md
src/: agent.py  findings.py  options.py  scoring.py
src/indicators/: batch.py  generic.py  proxy.py  token.py
src/metrics/batch/: airdrop.py  batch.py  erc20.py  native.py  nft.py
src/metrics/evasion/: morphing.py  redirection.py
src/metrics/normal/: proxy.py
src/parsing/: bytecode.py  inputs.py
tests/: test_findings.py
